# jmrl

./: .gitignore  404.html  Cargo.toml  README.md  config.toml  index.html  monitor.sh  performance-test.sh  robots.txt  sitemap.xml  vercel.json
assets/: blog.html  index.html  post.html
assets/posts/: test.md  test2.md
assets/static/: index.js  style.css
content/posts/: blog-from-scratch-in-rust.md  test.md  test2.md
src/: config.rs  error.rs  main.rs
src/handlers/: mod.rs  web.rs
src/models/: blog.rs  mod.rs
src/services/: blog.rs  mod.rs  rss.rs  sitemap.rs
src/utils/: mod.rs  template.rs
static/: manifest.json  robots.txt  sw.js
static/css/: style.css
static/js/: app.js
templates/: 404.html  500.html  blog.html  index.html  offline.html  post.html
