[package]
name = "jmrl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = {version = "0.7.9"}
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
maxminddb = "0.24.0"
pulldown-cmark = { version = "0.12.2", features = ["simd"] }
regex = "1.0"
rss = "2.0"
serde = {version = "1.0.217", features = ["derive"]}
thiserror = "1.0"
tokio = { version = "1.43.0", features = ["fs", "rt-multi-thread", "macros"] }
toml = "0.8"
tower = {version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version="0.3.19", features = ["env-filter"] }
user-agent-parser = "0.3.6"
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3